repaired localization with locale files

--- a/MIS-app/src/main/resources/texts.properties
+++ b/MIS-app/src/main/resources/texts.properties
@@ -1,18 +1,18 @@
 About=About
-Add\ Guest=Add Guest
-Add\ Reservation=Add Reservation
-Add\ Room=Add Room
-Delete\ Guest=Delete Guest
-Delete\ Reservation=Delete Reservation
-Delete\ Room=Delete Room
-Edit\ Guest=Edit Guest
-Edit\ Reservation=Edit Reservation
-Edit\ Room=Edit Room
-Find\ Empty\ Rooms=Find Empty Rooms
-Find\ Guest\ Reservation=Find Guest Reservation
-Find\ Room\ Reservation=Find Room Reservation
+AddGuestBtn=Add Guest
+AddReservationBtn=Add Reservation
+AddRoomBtn=Add Room
+DeleteGuestBtn=Delete Guest
+DeleteReservationBtn=Delete Reservation
+DeleteRoomBtn=Delete Room
+EditGuestBtn=Edit Guest
+EditReservationBtn=Edit Reservation
+EditRoomBtn=Edit Room
+FindEmptyRoomsBtn=Find Empty Rooms
+FindGuestReservationBtn=Find Guest Reservation
+FindRoomReservationBtn=Find Room Reservation
 Guests=Guests
 Home=Home
+homePageTextArea1=This is home page for MIS...
 Reservations=Reservations
 Rooms=Rooms
-This\ is\ home\ page\ for\ MIS...=This is home page for MIS...
