--- a/MIS-app/pom.xml
+++ b/MIS-app/pom.xml
@@ -132,6 +132,11 @@
             <version>1.7.6</version>
         </dependency>
         -->
+        <dependency>
+            <groupId>org.jdesktop</groupId>
+            <artifactId>beansbinding</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
