MIS 1.5.2 - added button functionality

--- a/MIS-app/src/main/resources/texts.properties
+++ b/MIS-app/src/main/resources/texts.properties
@@ -29,6 +29,7 @@ requirePhone=You need to fill phone number into Form.
 
 Reservations=Reservations
 AddReservationBtn=Check In
+createReservation=Create Reservation
 DeleteReservationBtn=Check Out
 EditReservationBtn=Edit Reservation
 FindEmptyRoomsBtn=Find Empty Rooms
