--- a/MIS-app/src/main/resources/texts.properties
+++ b/MIS-app/src/main/resources/texts.properties
@@ -2,11 +2,12 @@ Home=Home
 homePageTextArea1=This is home page for MIS...
 About=About
 about.authors=Authors: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
-about.version=Version: 1.1
-about.edited=Last Edited: 03.05.2017
+about.version=Version: 1.7
+about.edited=Last Edited: 07.05.2017
 exit=Exit
 save=Save
 cancel=Cancel
+continue=Continue
 
 Guests=Guests
 AddGuestBtn=Add Guest
@@ -41,6 +42,15 @@ endTime=To
 room=Room
 guest=Guest
 price=Price
+enterDatepls=One or both Dates are missing. Please select both dates.
+requireDate=You need to fill date into Form.
+dateError=Date error.
+fromLaterThanTo=End time is sooner than start time.
+badPrice=Price is in bad format.
+correctPrice=Please correct the given price in form.
+reallyDeleteRes=Do you really want to delete reservation?
+notSelectRes=Reservation in table not selected.
+cantCheckout=Can't check out guest.
 
 Rooms=Rooms
 AddRoomBtn=Add Room
@@ -55,4 +65,5 @@ cantDeleteRoom=Cannot delete the room.
 reallyDeleteRoom=Do you really want to delete the room?
 roomNumberWarn1=Please lookup available (empty) rooms through
 roomNumberWarn2="Find Empty Rooms" button before selecting
-roomNumberWarn3=  room number.
+roomNumberWarn3= room number.
+emptyRooms=Empty rooms.
