MIS 1.7.0. - refactor of code

--- a/MIS-app/src/main/resources/texts.properties
+++ b/MIS-app/src/main/resources/texts.properties
@@ -67,3 +67,5 @@ roomNumberWarn1=Please lookup available (empty) rooms through
 roomNumberWarn2="Find Empty Rooms" button before selecting
 roomNumberWarn3= room number.
 emptyRooms=Empty rooms.
+roomAlreadyAdded=Room already added.
+roomAdded=Room is already added.
