MIS 1.7.0. - added logo/refactored code

--- a/MIS-app/src/main/resources/texts.properties
+++ b/MIS-app/src/main/resources/texts.properties
@@ -3,7 +3,7 @@ homePageTextArea1=This is home page for MIS...
 About=About
 about.authors=Authors: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
 about.version=Version: 1.7
-about.edited=Last Edited: 07.05.2017
+about.edited=Last Edited: 09.05.2017
 exit=Exit
 save=Save
 cancel=Cancel
@@ -69,3 +69,7 @@ roomNumberWarn3= room number.
 emptyRooms=Empty rooms.
 roomAlreadyAdded=Room already added.
 roomAdded=Room is already added.
+chooseRoompls=Choose room first.
+chooseRoom=Choose room please.
+chooseGuestpls=Choose guest first.
+chooseGuest=Choose guest please.
